<resources>
    <string name="app_name">考勤记录管理系统</string>
    <string name="activity_title_edit_user">编辑资料</string>
    <string name="activity_title_user_info">用户信息</string>
    <string name="activity_title_create_group">创建组</string>
    <string name="activity_title_create_group_edit">修改组</string>
    <string name="activity_title_my_create_group">我创的建组</string>
    <string name="activity_title_my_join_group">我加入的组</string>
    <string name="activity_title_all_user">全部组员</string>
    <string name="activity_title_qrc_join">加入二维码</string>
    <string name="activity_title_qrc">扫一扫</string>
    <string name="activity_title_group_info">组信息</string>
    <string name="activity_title_search_group">查询组</string>
    <string name="activity_title_my_start_sign">我发起的签到</string>
    <string name="activity_title_sign_start">签到</string>
    <string name="activity_title_setting">更多设置</string>
    <string name="activity_title_start_sign_info">签到统计</string>
    <string name="activity_title_start_sign_user">组员签到</string>
    <string name="login_welcome">欢迎使用</string>
    <string name="login_welcome_2">未注册的账号将自动注册并登录</string>
    <string name="login_welcome_3">已注册过的账户才能通过邮件验证码登录</string>
    <string name="login_name_welcome">账号密码登录</string>
    <string name="login_email_welcome">邮箱验证码登录</string>
    <string name="login_name">用户名/E-mail</string>
    <string name="login_password">用户密码</string>
    <string name="login_vcode">邮件验证码</string>
    <string name="login_get_vcode">获取验证码</string>
    <string name="login_goto">登录/注册</string>
    <string name="login_goto2">登录</string>
    <string name="login_user_grade_0">用户</string>
    <string name="login_user_grade_1">管理员</string>
    <string name="login_user_grade_2">超级管理员</string>
    <string name="login_user_id">用户ID: </string>
    <string name="login_user_token_nul">请先登录！</string>
    <string name="login_user_token_failure">登录失效！</string>
    <string name="drawer_setting">更多设置</string>
    <string name="drawer_problem">切换主题</string>
    <string name="drawer_out">退出登录</string>
    <string name="drawer_sex_boy">男</string>
    <string name="drawer_sex_girl">女</string>
    <string name="drawer_list_group_user">组员功能</string>
    <string name="drawer_list_group_user_sign_in">当前签到</string>
    <string name="drawer_list_group_user_join_group">我加入的组</string>
    <string name="drawer_list_group_user_info">我的信息</string>
    <string name="drawer_list_group_user_historical_record">历史记录</string>
    <string name="drawer_list_group_creator">创建者功能</string>
    <string name="drawer_list_group_creator_group">创建组</string>
    <string name="drawer_list_group_creator_my_group">我创建的组</string>
    <string name="drawer_list_group_creator_start_sign">发起签到</string>
    <string name="drawer_list_group_creator_my_ok_group">已创建的</string>
    <string name="drawer_list_group_creator_sign_info">组员签到信息</string>
    <string name="load_header_up_data">更新成功</string>
    <string name="load_footer_err">加载失败</string>
    <string name="load_footer_null">没有数据啦</string>
    <string name="main_top_user_sign_start">当前签到</string>
    <string name="main_top_user_sign_group">我的群组</string>
    <string name="main_top_user_sign_record">历史记录</string>
    <string name="main_top_user_info">我的资料</string>
    <string name="main_top_root_user_sign_start">发起签到</string>
    <string name="main_top_root_user_sign_check">批阅签到</string>
    <string name="main_top_root_user_online">在线</string>
    <string name="main_top_root_user_connecting">连接中…</string>
    <string name="main_top_root_user_offline">离线</string>
    <string name="main_list_item_join">加</string>
    <string name="main_list_item_sign">签</string>
    <string name="main_start_sign_nul">当前没有数据哦</string>
    <string name="activity_qrc_image">相册</string>
    <string name="activity_qrc_search">搜索</string>
    <string name="activity_qrc_face">面对面</string>
    <string name="activity_search_group">输入组ID/组名</string>
    <string name="activity_search_nul">搜索词不能为空哦！</string>
    <string name="activity_sqr_nul">此二维码无效</string>
    <string name="my_create_group_dialog_edit">编辑组信息</string>
    <string name="my_create_group_dialog_dissolve">解散此组</string>
    <string name="my_create_group_dialog_dissolve_msg">此操作不可逆，是否解散此组？</string>
    <string name="my_create_group_dialog_dissolve_out_msg">此操作不可逆，是否解退出此组？</string>
    <string name="my_create_group_dialog_send">发起签到</string>
    <string name="my_create_group_qrc">此组二维码</string>
    <string name="my_create_group_ftf">面对面加组</string>
    <string name="my_initiate_sign_time">发起时间</string>
    <string name="group_info_more">更多</string>
    <string name="group_info_info">组信息</string>
    <string name="group_info_controls">组操作</string>
    <string name="group_info_people">人</string>
    <string name="group_info_join_ok">加入成功</string>
    <string name="group_info_join_group">加入该组</string>
    <string name="group_info_out_group">退出该组</string>
    <string name="group_info_out_ok">退出成功</string>
    <string name="group_info_dissolve_ok">解散成功</string>
    <string name="group_info_dissolve_group">解散该组</string>
    <string name="group_info_copy_group_id">已复制组ID</string>
    <string name="group_info_copy_group_name">已复制组名</string>
    <string name="edit_user_info_account">账号</string>
    <string name="edit_user_info_name">昵称</string>
    <string name="edit_user_info_hidden">私密账号</string>
    <string name="edit_user_info_cipher_join">密码加入</string>
    <string name="edit_user_info_npc">可搜索此群</string>
    <string name="edit_user_info_verify">加入密码验证</string>
    <string name="edit_user_info_verify_pws">密码</string>
    <string name="edit_user_info_verify_set">设置</string>
    <string name="edit_user_info_qr">启用二维码加入</string>
    <string name="edit_user_info_ftf">启用面对面加入</string>
    <string name="edit_user_info_sex">性别</string>
    <string name="edit_user_info_age">年龄</string>
    <string name="edit_user_info_birth">出生日期</string>
    <string name="edit_user_info_introduce">个性签名</string>
    <string name="edit_user_info_introduce_vice">点击编辑</string>
    <string name="edit_user_info_unit">所属单位/学校</string>
    <string name="edit_user_info_create_time">创建时间</string>
    <string name="edit_user_info_password">修改密码</string>
    <string name="edit_user_info_password_vice">点击修改</string>
    <string name="edit_user_info_open">该用户部分资料未公开</string>
    <string name="photo_title">全部图片</string>
    <string name="photo_nul">没有图片</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="photo_choose_nul">未选择图片</string>
    <string name="photo_crop_error">裁剪失败</string>
    <string name="start_sign_next_step">下一步</string>
    <string name="start_sign_create">先创建一个组吧</string>
    <string name="start_sign_choose_group">选择组</string>
    <string name="start_sign_fill_info">填写信息</string>
    <string name="start_sign_sign_type">签到方式</string>
    <string name="start_sign">发起签到</string>
    <string name="start_sign_title">标题</string>
    <string name="start_sign_title_input">发起签到的标题（可空）</string>
    <string name="start_sign_time">持续时间</string>
    <string name="start_sign_content_input">发起签到的内容（可空）</string>
    <string name="start_sign_content">内容</string>
    <string name="start_sign_type_nul_pws">无密码</string>
    <string name="start_sign_type_num_pws">数字密码</string>
    <string name="start_sign_type_gesture_pws">手势密码</string>
    <string name="start_sign_type_sqc_pws">二维码</string>
    <string name="start_sign_type_pws">请输入4位数字密码</string>
    <string name="start_sign_type_gesture">请绘制至少4个点的图案</string>
    <string name="start_sign_type_progress">进行中</string>
    <string name="start_sign_type_defunct">已结束</string>
    <string name="start_sign_type_unlimited">不限时</string>
    <string name="start_sign_group_nul">该签到发起的组已解散</string>
    <string name="start_sign_group_del">此操作不可逆，是否删除此签到？</string>
    <string name="start_sign_user_ok">签到完成</string>
    <string name="start_sign_not_group">未选择组</string>
    <string name="start_sign_initiator_user">发起者</string>
    <string name="start_sign_initiator_group">发起组</string>
    <string name="start_sign_user_sign_ok">已完成</string>
    <string name="start_sign_user_sign_expired">已过期</string>
    <string name="start_sign_user_sign_goto">前往签到</string>
    <string name="start_sign_user_sign_complete">已签到</string>
    <string name="start_sign_user_sign_user_all">总人数</string>
    <string name="create_group_name">组名</string>
    <string name="create_group_name_input">给组起个好听的名字吧</string>
    <string name="create_group_introduce">组介绍</string>
    <string name="create_group_introduce_input">添加介绍更方便组员了解本组用途哦！(可空)</string>
    <string name="create_group_type">组类型</string>
    <string name="create_group_privacy">组隐私</string>
    <string name="create_group_error">失败</string>
    <string name="create_group_create_error">创建失败</string>
    <string name="dialog_load_title">加载中…</string>
    <string name="dialog_load_title_login">登录中…</string>
    <string name="dialog_load_title_modify">修改中…</string>
    <string name="dialog_load_title_net_error">网络异常！</string>
    <string name="dialog_msg_cancel">取消</string>
    <string name="dialog_msg_confirm">确认</string>
    <string name="dialog_msg_complete">完成</string>
    <string name="dialog_msg_out_login">你可能错过签到任务，确认退出登录吗？</string>
    <string name="dialog_msg_out_login_q">您的账号在其它设备登录，如非本人操作，请尽快修改密码！</string>
    <string name="dialog_msg_out_login_pws_nul">密码已过期，你被迫下线！</string>
    <string name="dialog_edit_old_password">旧密码</string>
    <string name="dialog_edit_new_password">新密码</string>
    <string name="dialog_edit_modify">修改</string>
    <string name="dialog_edit_input">请输入</string>
    <string name="dialog_edit_sex_title">修改性别</string>
    <string name="dialog_edit_age_title">修改年龄</string>
    <string name="dialog_edit_birth_title">修改出生日期</string>
    <string name="dialog_edit_nul">不能为空</string>
    <string name="photo_all">全部</string>
    <string name="photo_on">没有</string>
    <string name="edit_pws_pattern_error">图案错误</string>
    <string name="edit_pws_pattern_for4">至少4个点</string>
    <string name="edit_pws_pattern_again">再次绘制</string>
    <string name="edit_pws_pattern_mismatch">不匹配，请重新绘制</string>
    <string name="edit_pws_num_err">密码错误</string>
    <string name="edit_pws_num_again">再次输入</string>
    <string name="settings_theme_title">主题</string>
    <string name="settings_theme_sys">跟随系统</string>
    <string name="settings_theme_night">夜间模式</string>
    <string name="settings_theme_day">日间模式</string>
    <string name="settings_theme_app">软件</string>
    <string name="settings_theme_app_cache">清除缓存</string>
    <string name="settings_theme_app_issue">常见问题</string>
    <string name="settings_theme_app_service">服务条款</string>
    <string name="settings_theme_app_privacy">隐私政策</string>
    <string name="settings_theme_item">项目</string>
    <string name="settings_theme_item_state">申明</string>
    <string name="settings_theme_language">语言</string>
    <string name="settings_theme_language_cn">中文</string>
    <string name="settings_theme_language_en">英文</string>
    <string name="all_out_user">此操作不可逆，是否请出该用户？</string>
    <string name="user_out_err">退出失败</string>
    <string name="app_again_out">再按一次退出</string>
    <string name="app_err">出错</string>
    <string name="app_permissions_turn_down">已被被永久拒绝授权，请手动授予</string>
    <string name="app_permissions_err">权限授予失败</string>
    <string name="app_years">年</string>
    <string name="app_month">月</string>
    <string name="app_days">日</string>
    <string name="test_2">***</string>
    <string name="test_3">女</string>
    <string name="test_8">\@****** ****** 据开发商的后果发挥几点开始广泛的好几个 据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个据开发商的后果发挥几点开始广泛的好几个 02-03 13:22</string>
    <string name="test_9">22</string>
    <string name="test_10">加州理工学院</string>
    <string name="test_11">2023-03-10 21:16:45</string>
    <string name="test_12">******@136.com</string>
</resources>